fix: ugly scrollbar in chrome

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -24,6 +24,21 @@ body {
   background-color: color-mix(in srgb, var(--text), transparent 85%);
 }
 
+html[browser="chrome"] *::-webkit-scrollbar {
+  width: 8px;
+}
+ 
+html[browser="chrome"] *::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+ 
+html[browser="chrome"] *::-webkit-scrollbar-thumb {
+  border-radius: 8px;
+  background-color: var(--border);
+}
+
+
+
 main {
   flex: 1;
   display: flex;
